<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_xl"
        android:paddingTop="@dimen/spacing_xxl"
        android:paddingEnd="@dimen/spacing_xl"
        android:paddingBottom="@dimen/spacing_xxl">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/records_best_title"
            android:textAppearance="@style/TextAppearance.Template.SectionTitle" />

        <LinearLayout
            android:id="@+id/container_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_best_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/records_best_empty"
            android:textAppearance="@style/TextAppearance.Template.BodySecondary"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:text="@string/records_recent_title"
            android:textAppearance="@style/TextAppearance.Template.SectionTitle" />

        <LinearLayout
            android:id="@+id/container_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_recent_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/records_recent_empty"
            android:textAppearance="@style/TextAppearance.Template.BodySecondary"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
