<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page">

    <TextView
        android:id="@+id/tv_hub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:text="@string/hub_title"
        android:textAppearance="@style/TextAppearance.Template.SectionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_games"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_lg"
        android:layout_marginEnd="@dimen/spacing_md"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_xxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hub_title" />

    <LinearLayout
        android:id="@+id/layout_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hub_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🎮"
            android:textSize="@dimen/text_size_emoji" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/hub_empty"
            android:textAppearance="@style/TextAppearance.Template.CardTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/hub_empty_hint"
            android:textAppearance="@style/TextAppearance.Template.BodySecondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
